fixed bug with parallax on mobile

--- a/src/components/Middle/middle.css
+++ b/src/components/Middle/middle.css
@@ -44,6 +44,6 @@
 
 @media (--tablet-size) {
   .middle {
-    padding: 0px 7%;
+    padding: 0px 7% 100px 7%;
   }
 }
